--- a/carousel2/Base.lproj/Main.storyboard
+++ b/carousel2/Base.lproj/Main.storyboard
@@ -158,6 +158,12 @@
                                             <action selector="BtnTakeSpin:" destination="Aa2-FH-V1M" eventType="touchUpInside" id="6TY-4W-wpw"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Os-pP-nmU">
+                                        <rect key="frame" x="980" y="486" width="286" height="59"/>
+                                        <connections>
+                                            <segue destination="fK3-0o-l7z" kind="modal" id="fvE-7h-e40"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                             </scrollView>
                             <pageControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="4" translatesAutoresizingMaskIntoConstraints="NO" id="VEl-f5-UOc">
@@ -203,9 +209,48 @@
             </objects>
             <point key="canvasLocation" x="162" y="351"/>
         </scene>
+        <!--Timeline-->
+        <scene sceneID="DUO-h4-PU4">
+            <objects>
+                <viewController title="Timeline" id="fK3-0o-l7z" customClass="Timeline" customModule="carousel2" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="zmT-ka-O8g"/>
+                        <viewControllerLayoutGuide type="bottom" id="Zwb-Lw-hyB"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="xx9-hF-meK">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="1000"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gB0-BE-zxB">
+                                <rect key="frame" x="0.0" y="100" width="320" height="568"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="feed" translatesAutoresizingMaskIntoConstraints="NO" id="s34-60-s1M">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="1358"/>
+                                    </imageView>
+                                </subviews>
+                            </scrollView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="feed_nav" translatesAutoresizingMaskIntoConstraints="NO" id="i2b-Yd-p2D">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="128"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="320" height="1000"/>
+                    <connections>
+                        <outlet property="Feed" destination="s34-60-s1M" id="OjZ-pa-vTH"/>
+                        <outlet property="TimeLineScrollView" destination="gB0-BE-zxB" id="3xt-O7-wWf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dfP-6a-pyD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2432" y="1411"/>
+        </scene>
     </scenes>
     <resources>
         <image name="backup_button" width="320" height="97"/>
+        <image name="feed" width="320" height="1564"/>
+        <image name="feed_nav" width="320" height="65"/>
         <image name="intro" width="320" height="1136"/>
         <image name="intro_tile1" width="153" height="152"/>
         <image name="intro_tile2" width="76" height="75"/>
