--- a/carousel2/Base.lproj/Main.storyboard
+++ b/carousel2/Base.lproj/Main.storyboard
@@ -164,26 +164,17 @@
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="welcome1" translatesAutoresizingMaskIntoConstraints="NO" id="kYG-4k-MJv">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                     </imageView>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="backup_button" translatesAutoresizingMaskIntoConstraints="NO" id="EYb-bi-lgS">
-                                        <rect key="frame" x="967" y="448" width="314" height="97"/>
-                                    </imageView>
-                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rlj-YE-EdA">
-                                        <rect key="frame" x="1212" y="447" width="51" height="31"/>
-                                    </switch>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gvs-BC-osW">
-                                        <rect key="frame" x="987" y="40" width="269" height="399"/>
-                                        <connections>
-                                            <action selector="BtnTakeSpin:" destination="Aa2-FH-V1M" eventType="touchUpInside" id="6TY-4W-wpw"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Os-pP-nmU">
-                                        <rect key="frame" x="980" y="486" width="286" height="59"/>
-                                        <connections>
-                                            <segue destination="fK3-0o-l7z" kind="modal" id="fvE-7h-e40"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
                             </scrollView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="backup_button" translatesAutoresizingMaskIntoConstraints="NO" id="EYb-bi-lgS">
+                                <rect key="frame" x="960" y="430" width="314" height="97"/>
+                            </imageView>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rlj-YE-EdA">
+                                <rect key="frame" x="1200" y="430" width="51" height="31"/>
+                            </switch>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Os-pP-nmU">
+                                <rect key="frame" x="975" y="470" width="286" height="59"/>
+                            </button>
                             <pageControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="4" translatesAutoresizingMaskIntoConstraints="NO" id="VEl-f5-UOc">
                                 <rect key="frame" x="150" y="500" width="39" height="37"/>
                                 <color key="pageIndicatorTintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -196,11 +187,11 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="1280" height="568"/>
                     <connections>
-                        <outlet property="BtnTakeSpin" destination="gvs-BC-osW" id="k5x-qV-dbP"/>
                         <outlet property="ImgBackupTakeSpin" destination="EYb-bi-lgS" id="dGv-Dx-OoO"/>
                         <outlet property="Lightswitch" destination="rlj-YE-EdA" id="lQX-cQ-AZe"/>
                         <outlet property="Pagination" destination="VEl-f5-UOc" id="PTp-0z-Ucq"/>
                         <outlet property="ScrollTutorial" destination="Ad4-5Y-2QN" id="aV4-7L-arA"/>
+                        <segue destination="fK3-0o-l7z" kind="modal" identifier="TimelineSegue" modalTransitionStyle="crossDissolve" id="Ote-Ox-9qF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mhd-ar-KEZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -262,7 +253,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dfP-6a-pyD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2432" y="1411"/>
+            <point key="canvasLocation" x="2241" y="1413"/>
         </scene>
     </scenes>
     <resources>
