--- a/carousel2/Base.lproj/Main.storyboard
+++ b/carousel2/Base.lproj/Main.storyboard
@@ -164,16 +164,19 @@
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="welcome1" translatesAutoresizingMaskIntoConstraints="NO" id="kYG-4k-MJv">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                     </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="backup_button" translatesAutoresizingMaskIntoConstraints="NO" id="EYb-bi-lgS">
+                                        <rect key="frame" x="960" y="440" width="314" height="97"/>
+                                    </imageView>
+                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rlj-YE-EdA">
+                                        <rect key="frame" x="1205" y="440" width="51" height="31"/>
+                                    </switch>
                                 </subviews>
                             </scrollView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="backup_button" translatesAutoresizingMaskIntoConstraints="NO" id="EYb-bi-lgS">
-                                <rect key="frame" x="960" y="430" width="314" height="97"/>
-                            </imageView>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rlj-YE-EdA">
-                                <rect key="frame" x="1200" y="430" width="51" height="31"/>
-                            </switch>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Os-pP-nmU">
-                                <rect key="frame" x="975" y="470" width="286" height="59"/>
+                                <rect key="frame" x="20" y="400" width="286" height="150"/>
+                                <connections>
+                                    <action selector="BtnGoTimeline:" destination="Aa2-FH-V1M" eventType="touchUpInside" id="EAF-j5-nAa"/>
+                                </connections>
                             </button>
                             <pageControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="4" translatesAutoresizingMaskIntoConstraints="NO" id="VEl-f5-UOc">
                                 <rect key="frame" x="150" y="500" width="39" height="37"/>
